--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Design and Developed by:
-<a href="http://garen.meserlian.com">Garen Meserlian</a>
+Garen Meserlian http://garen.meserlian.com
 Twitter: @meserlian
 
 
